fixed footer alignment and footer in portfolio page

--- a/css/footer.css
+++ b/css/footer.css
@@ -7,6 +7,7 @@
 .footer__content {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
   gap: 94px;
 }
 
